--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/cool-animations.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/cool-animations.js"></script>
     
     <title>Portfolio</title>
 </head>
@@ -14,7 +14,7 @@
         <div class="presentation-container reveal">
             <h1 class="title">Welcome to my portfolio website!</h1>
         </div>
-        <img src="/assets/images/city-4791269.svg" class="background-pic">
+        <img src="assets/images/city-4791269.svg" class="background-pic">
     </section>
     <section class="main-bg">
         <p class="reveal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, fugiat a eligendi sunt praesentium rem illum ipsum dolorem totam id sit harum possimus omnis et dolor perspiciatis recusandae. Non, voluptatibus?</p>
