--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 
+    <!-- Manifest -->
+    <link rel="manifest" href="manifest.json">
+
     <title>Portfolio</title>
 </head>
 
