--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </div>
     <!-- JS -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="js/vh-helper.js"></script>
     <script src="js/swiper.js"></script>
 
 </body>
