Better styling and flex css classes

--- a/index.html
+++ b/index.html
@@ -29,28 +29,43 @@
             <div class="swiper-slide">
                 <section class="dark-bg">
                     <div class="presentation-container">
-                        <h1 class="title"><i class="fas fa-terminal"></i> Welcome to my portfolio website!</h1>
+                        <h1 style="font-size: 4vw;"><i class="fas fa-terminal"></i> Welcome to my portfolio website!</h1>
                     </div>
                     <img src="assets/images/city-4791269.svg" class="background-pic">
                 </section>
             </div>
-            
+
             <div class="swiper-slide">
                 <section class="main-bg">
-                    <p class="reveal" id="reveal-slide-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, fugiat a eligendi
-                        sunt
-                        praesentium rem illum ipsum dolorem totam id sit harum possimus omnis et dolor perspiciatis
-                        recusandae.
-                        Non, voluptatibus?</p>
+                    <div class="flex-rows">
+                        <div class="text-container reveal" id="reveal-slide-1">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Cum, fugiat a eligendi
+                                sunt
+                                praesentium rem illum ipsum dolorem totam id sit harum possimus omnis et dolor
+                                perspiciatis
+                                recusandae.
+                                Non, voluptatibus?
+                            </p>
+                        </div>
+                        <img src="assets/images/pp.jfif" style="border-radius: 100%; max-height: 200px;">
+                    </div>
                 </section>
             </div>
-            
+
             <div class="swiper-slide">
                 <section class="dark-bg"></section>
             </div>
 
             <div class="swiper-slide">
-                <section class="secondary-bg"></section>
+                <section class="secondary-bg">
+                    <div class="text-container reveal" id="reveal-slide-3">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum reiciendis mollitia tempora
+                            obcaecati? Tempore officia velit porro? In id, neque eos adipisci, laboriosam placeat aut
+                            mollitia veritatis cupiditate doloribus sunt.
+                        </p>
+                    </div>
+                </section>
             </div>
 
         </div>
