more reponsive text size

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="swiper-slide">
                 <section class="dark-bg">
                     <div class="presentation-container">
-                        <h1 style="font-size: 4vw;"><i class="fas fa-terminal"></i> Welcome to my portfolio website!</h1>
+                        <h1 style="font-size: max(4vw, 50px); text-align: center;"><i class="fas fa-terminal"></i> Welcome to my portfolio website!</h1>
                     </div>
                     <img src="assets/images/city-4791269.svg" class="background-pic">
                 </section>
