Change in background color

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="swiper-slide">
-                <section class="dark-bg"></section>
+                <section style="background: linear-gradient(180deg, rgba(84,3,189,1) 40%, rgba(238,82,121,1) 100%);"></section>
             </div>
 
             <div class="swiper-slide">
