fixed typo and better slide sizing

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="assets/images/city-4791269.svg" class="background-pic">
     </section>
 
-    <section class="main-bg full-page">
+    <section class="main-bg slide">
         <div class="flex-rows">
             <div class="text-container reveal">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <section class="full-page flex-columns js"
+    <section class="slide flex-columns js"
         style="background: linear-gradient(180deg, rgba(84,3,189,1) 40%, rgba(238,82,121,1) 100%); height: auto;">
         <h1 class="slide-title">Skills</h1>
         <div class="flex-columns ja" style="min-height: 80vh;">
@@ -89,7 +89,7 @@
     </section>
 
 
-    <section class="secondary-bg">
+    <section class="full-page secondary-bg">
         <div class="text-container reveal">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum reiciendis mollitia tempora
                 obcaecati? Tempore officia velit porro? In id, neque eos adipisci, laboriosam placeat aut
